--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,24 @@
-aiosignal==1.3.1
-anyio==3.7.0
 asgiref==3.6.0
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bottle==0.12.25
-bottle-websocket==0.2.9
-bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
-comm==0.1.3
-contourpy==1.1.0
-customtkinter==5.1.3
-cycler==0.11.0
-darkdetect==0.8.0
-debugpy==1.6.7
-decorator==5.1.1
 Django==4.1.5
 django-appconf==1.0.5
-django-compressor==4.3.1
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-Eel==0.16.0
-exceptiongroup==1.1.1
-executing==1.2.0
 fire==0.5.0
-fonttools==4.40.0
-frozenlist==1.3.3
-future==0.18.3
-gevent==22.10.2
-gevent-websocket==0.10.1
-greenlet==2.0.2
 gunicorn==20.1.0
-h11==0.14.0
-httpcore==0.17.2
-httpx==0.24.1
 idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.0.0
-iniconfig==2.0.0
-ipykernel==6.24.0
-ipython==8.14.0
-jedi==0.18.2
-Jinja2==3.1.2
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-kiwisolver==1.4.4
-lxml==4.9.2
-MarkupSafe==2.1.2
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-multidict==6.0.4
-nest-asyncio==1.5.6
-numpy==1.25.0
-packaging==23.1
-pandas==2.0.3
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.0
-platformdirs==3.8.1
-playwright==1.34.0
-pluggy==1.0.0
-prompt-toolkit==3.0.39
-psutil==5.9.5
-psycopg2-binary==2.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyee==9.0.4
-Pygments==2.15.1
+psycopg2==2.9.6
 PyJWT==2.6.0
-pyparsing==3.0.9
-pytest==7.3.1
-pytest-base-url==2.0.0
-pytest-playwright==0.3.3
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-slugify==8.0.1
 pytz==2022.7.1
-pyzmq==25.1.0
 rcssmin==1.1.1
 requests==2.28.2
 rjsmin==1.2.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
 sqlparse==0.4.3
-stack-data==0.6.2
 termcolor==2.2.0
-text-unidecode==1.3
-tk==0.1.0
-tomli==2.0.1
-tornado==6.3.2
-traitlets==5.9.0
-types-beautifulsoup4==4.12.0.5
-types-html5lib==1.1.11.14
-types-urllib3==1.26.25.13
-typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.14
-wcwidth==0.2.6
-whichcraft==0.6.1
 whitenoise==6.3.0
-yarl==1.9.2
-zipp==3.15.0
-zope.event==4.6
-zope.interface==6.0
