--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-asgiref==3.6.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
-Django==4.1.5
-django-appconf==1.0.5
-django-cors-headers==3.13.0
-django-environ==0.9.0
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-fire==0.5.0
+asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==8.0.4
+Django==4.0.1
+django-cors-headers==3.11.0
+django-environ==0.8.1
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.0.0
+fire==0.4.0
 gunicorn==20.1.0
-idna==3.4
-psycopg2==2.9.6
-psycopg2-binary==2.9.6
-PyJWT==2.6.0
-pytz==2022.7.1
-rcssmin==1.1.1
-requests==2.28.2
-rjsmin==1.2.1
+idna==3.3
+mccabe==0.6.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.1
+psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+pyflakes==2.4.0
+PyJWT==2.3.0
+pytz==2021.3
+requests==2.27.1
 six==1.16.0
-sqlparse==0.4.3
-termcolor==2.2.0
-tzdata==2023.3
-urllib3==1.26.14
-whitenoise==6.3.0
+sqlparse==0.4.2
+termcolor==1.1.0
+tomli==2.0.1
+urllib3==1.26.8
+whitenoise==5.3.0
